--- a/com.wso2telco.dep.hub.creditapi/pom.xml
+++ b/com.wso2telco.dep.hub.creditapi/pom.xml
@@ -2,16 +2,20 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>com.wso2telco.dep.hub</groupId>
+    <artifactId>mediation-dep-hub</artifactId>
+    <version>1.0.0</version>
+  </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
-  <artifactId>mediation-dep-hub</artifactId>
+  <artifactId>com.wso2telco.dep.hub.creditapi</artifactId>
   <version>1.0.0</version>
   <packaging>pom</packaging>
-  <name>mediation-dep-hub</name>
-  <description>mediation-dep-hub</description>
+  <name>com.wso2telco.dep.hub.creditapi</name>
+  <description>com.wso2telco.dep.hub.creditapi</description>
   <modules>
-    <module>com.wso2telco.dep.hub.walletapi</module>
-    <module>com.wso2telco.dep.hub.creditapi</module>
-    <module>com.wso2telco.dep.hub.creditapi</module>
+    <module>com.wso2telco.dep.hub.creditapi.synapse</module>
+    <module>com.wso2telco.dep.hub.creditapi.capp</module>
   </modules>
   <build>
     <plugins>
