--- a/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
@@ -7,7 +7,7 @@
     <artifactId>com.wso2telco.dep.hub.walletapi</artifactId>
     <version>1.0.0</version>
   </parent>
-  <groupId>com.wso2telco.hub.walletapi.capp</groupId>
+  <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.walletapi.capp</artifactId>
   <version>1.0.0</version>
   <packaging>carbon/application</packaging>
