--- a/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.synapse/pom.xml
+++ b/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.synapse/pom.xml
@@ -8,8 +8,10 @@
     <version>1.0.0</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
+  <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.walletapi.synapse</artifactId>
   <packaging>pom</packaging>
+  <version>1.0.0</version>
   <name>com.wso2telco.dep.hub.walletapi.synapse</name>
   <description>com.wso2telco.dep.hub.walletapi.synapse</description>
   <properties>
