--- a/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>com.wso2telco.dep.hub.walletapi</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0-SNAPSHOT</version>
   </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.walletapi.capp</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0-SNAPSHOT</version>
   <packaging>carbon/application</packaging>
   <name>com.wso2telco.dep.hub.walletapi.capp</name>
   <description>com.wso2telco.dep.hub.walletapi.capp</description>
