--- a/com.wso2telco.dep.hub.customerinfoapi/com.wso2telco.dep.hub.customerinfoapi.synapse/pom.xml
+++ b/com.wso2telco.dep.hub.customerinfoapi/com.wso2telco.dep.hub.customerinfoapi.synapse/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>com.wso2telco.dep.hub.customerinfoapi</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>..\pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.customerinfoapi.synapse</artifactId>
