--- a/com.wso2telco.dep.hub.customerinfoapi/pom.xml
+++ b/com.wso2telco.dep.hub.customerinfoapi/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>mediation-dep-hub</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>pom.xml</relativePath>
+    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>com.wso2telco.dep.hub.customerinfoapi</artifactId>
   <packaging>pom</packaging>
