--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <module>com.wso2telco.dep.hub.walletapi</module>
     <module>com.wso2telco.dep.hub.creditapi</module>
     <module>com.wso2telco.dep.hub.provisionapi</module>
+    <module>com.wso2telco.dep.hub.customerinfoapi</module>
   </modules>
   <build>
     <plugins>
