--- a/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
@@ -23,13 +23,13 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.api</groupId>
       <artifactId>provisionAPI</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
         <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
   </dependencies>
