--- a/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
@@ -29,55 +29,55 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.api</groupId>
       <artifactId>walletAPI</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.balance.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.listing.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.payment.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.refund.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.balance.recaller.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.listing.recaller.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.refund.recaller.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.wallet.notification.Sequence</artifactId>
-      <version>1.0.0</version>
+      <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
   </dependencies>
