--- a/com.wso2telco.dep.hub.customerinfoapi/pom.xml
+++ b/com.wso2telco.dep.hub.customerinfoapi/pom.xml
@@ -6,7 +6,6 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>mediation-dep-hub</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
   </parent>
   <artifactId>com.wso2telco.dep.hub.customerinfoapi</artifactId>
   <packaging>pom</packaging>
@@ -14,6 +13,7 @@
   <description>com.wso2telco.dep.hub.customerinfoapi</description>
   <modules>
     <module>com.wso2telco.dep.hub.customerinfoapi.synapse</module>
+    <module>com.wso2telco.dep.hub.customerinfoapi.capp</module>
   </modules>
   <build>
     <plugins>
