--- a/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
@@ -6,7 +6,7 @@
     <groupId>com.wso2telco.dep.hub</groupId>
     <artifactId>com.wso2telco.dep.hub.provisionapi</artifactId>
     <version>2.0.0-SNAPSHOT</version>
-  </parent>  
+  </parent>
   <groupId>com.wso2telco.dep.hub</groupId>
   <artifactId>com.wso2telco.dep.hub.provisionapi.capp</artifactId>
   <version>2.0.0-SNAPSHOT</version>
@@ -14,10 +14,10 @@
   <name>com.wso2telco.dep.hub.provisionapi.capp</name>
   <description>com.wso2telco.dep.hub.provisionapi.capp</description>
   <properties>
-    <com.wso2telco.dep.hub.api_._provisionAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._provisionAPI>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence>
-    
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <com.wso2telco.dep.hub.api_._provisionAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._provisionAPI>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>
+    <artifact.types>synapse/priority-executor=xml,jaggery/app=zip,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,service/meta=xml,event/stream=json,synapse/proxy-service=xml,synapse/sequence=xml,bpel/workflow=zip,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,synapse/local-entry=xml,synapse/task=xml,event/publisher=xml,synapse/configuration=xml,webapp/jaxws=war,registry/resource=zip,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
   <dependencies>
     <dependency>
@@ -26,9 +26,15 @@
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
-        <dependency>
+    <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.provisionapi.queryApplicable.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
