--- a/com.wso2telco.dep.hub.customerinfoapi/com.wso2telco.dep.hub.customerinfoapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.customerinfoapi/com.wso2telco.dep.hub.customerinfoapi.capp/pom.xml
@@ -15,6 +15,8 @@
   <description>com.wso2telco.dep.hub.customerinfoapi.capp</description>
   <properties>
     <com.wso2telco.dep.hub.api_._customerinfoAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._customerinfoAPI>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.profile.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.profile.recaller.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.attributes.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.attributes.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.attributes.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.attributes.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.profile.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.customerinfoapi.handle.profile.Sequence>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
@@ -35,6 +37,18 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.api</groupId>
       <artifactId>customerinfoAPI</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.customerinfoapi.handle.attributes.recaller.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.customerinfoapi.handle.profile.recaller.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
