--- a/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
@@ -19,6 +19,7 @@
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.listServiceByCustomer.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.listServiceByCustomer.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovisionService.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>
+    <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisioning.notification.Sequence>
     <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
   </properties>
   <dependencies>
@@ -49,6 +50,12 @@
     <dependency>
       <groupId>com.wso2telco.dep.hub.sequence</groupId>
       <artifactId>com.wso2telco.dep.hub.provisionapi.listServiceByCustomer.Sequence</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.sequence</groupId>
+      <artifactId>com.wso2telco.dep.hub.provisionapi.provisioning.notification.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
     </dependency>
