--- a/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.provisionapi/com.wso2telco.dep.hub.provisionapi.capp/pom.xml
@@ -14,9 +14,10 @@
   <name>com.wso2telco.dep.hub.provisionapi.capp</name>
   <description>com.wso2telco.dep.hub.provisionapi.capp</description>
   <properties>
+    <com.wso2telco.dep.hub.resource_._provisioningConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._provisioningConfig>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.queryApplicable.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unPovisioning.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unPovisioning.notification.Sequence>
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,wso2/gadget=dar,synapse/api=xml,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <artifact.types>synapse/priority-executor=xml,jaggery/app=zip,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,service/meta=xml,event/stream=json,synapse/proxy-service=xml,synapse/sequence=xml,bpel/workflow=zip,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,synapse/local-entry=xml,synapse/task=xml,event/publisher=xml,synapse/configuration=xml,webapp/jaxws=war,registry/resource=zip,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.provisionService.Sequence>
     <com.wso2telco.dep.hub.api_._provisionAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._provisionAPI>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovision.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.provisionapi.unprovision.recaller.Sequence>
@@ -93,6 +94,12 @@
       <artifactId>com.wso2telco.dep.hub.provisionapi.listService.recaller.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>provisioningConfig</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>zip</type>
     </dependency>
   </dependencies>
   <repositories>
