--- a/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.walletapi/com.wso2telco.dep.hub.walletapi.capp/pom.xml
@@ -15,12 +15,13 @@
   <description>com.wso2telco.dep.hub.walletapi.capp</description>
   <properties>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.listing.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.listing.Sequence>
-    <artifact.types>jaggery/app=zip,synapse/priority-executor=xml,synapse/inbound-endpoint=xml,lib/registry/handlers=jar,service/rule=aar,lib/registry/filter=jar,synapse/message-store=xml,event/stream=json,service/meta=xml,synapse/proxy-service=xml,bpel/workflow=zip,synapse/sequence=xml,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,event/publisher=xml,synapse/local-entry=xml,synapse/task=xml,webapp/jaxws=war,registry/resource=zip,synapse/configuration=xml,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
+    <artifact.types>synapse/priority-executor=xml,jaggery/app=zip,synapse/inbound-endpoint=xml,service/rule=aar,synapse/message-store=xml,service/meta=xml,event/stream=json,synapse/proxy-service=xml,synapse/sequence=xml,bpel/workflow=zip,synapse/endpointTemplate=xml,carbon/application=car,synapse/api=xml,wso2/gadget=dar,synapse/event-source=xml,synapse/message-processors=xml,event/receiver=xml,lib/dataservice/validator=jar,synapse/template=xml,synapse/endpoint=xml,lib/carbon/ui=jar,lib/synapse/mediator=jar,synapse/local-entry=xml,synapse/task=xml,event/publisher=xml,synapse/configuration=xml,webapp/jaxws=war,registry/resource=zip,service/axis2=aar,synapse/lib=zip,synapse/sequenceTemplate=xml,event/execution-plan=siddhiql,service/dataservice=dbs,web/application=war,lib/library/bundle=jar</artifact.types>
     <com.wso2telco.dep.hub.api_._walletAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._walletAPI>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.listing.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.listing.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.payment.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.payment.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.refund.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.refund.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.balance.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.balance.Sequence>
+    <com.wso2telco.dep.hub.resource_._walletConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._walletConfig>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.balance.recaller.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.balance.recaller.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.wallet.notification.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.wallet.notification.Sequence>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.refund.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.walletapi.handle.refund.Sequence>
@@ -79,6 +80,12 @@
       <artifactId>com.wso2telco.dep.hub.walletapi.handle.wallet.notification.Sequence</artifactId>
       <version>2.0.0-SNAPSHOT</version>
       <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>walletConfig</artifactId>
+      <version>2.0.0-SNAPSHOT</version>
+      <type>zip</type>
     </dependency>
   </dependencies>
   <repositories>
