--- a/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
+++ b/com.wso2telco.dep.hub.paymentapi/com.wso2telco.dep.hub.paymentapi.capp/pom.xml
@@ -22,7 +22,9 @@
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.charge.Sequence>
     <com.wso2telco.dep.hub.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.api_._paymentAPI>
     <com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.paymentapi.synapse.api_._paymentAPI>
+    <com.wso2telco.dep.hub.resource_._operatorConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._operatorConfig>
     <com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.sequence_._com.wso2telco.dep.hub.paymentapi.handle.list.Sequence>
+    <com.wso2telco.dep.hub.resource_._userInfoConfig>capp/EnterpriseServiceBus</com.wso2telco.dep.hub.resource_._userInfoConfig>
   </properties>
   <dependencies>
     <dependency>
@@ -48,6 +50,18 @@
       <artifactId>com.wso2telco.dep.hub.paymentapi.handle.refund.Sequence</artifactId>
       <version>3.0.0-SNAPSHOT</version>
       <type>xml</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>operatorConfig</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
+    </dependency>
+    <dependency>
+      <groupId>com.wso2telco.dep.hub.resource</groupId>
+      <artifactId>userInfoConfig</artifactId>
+      <version>1.0.0</version>
+      <type>zip</type>
     </dependency>
   </dependencies>
   <repositories>
